# torch-gobject

./: README.md  codegen.py  meson.build
.github/workflows/: cmake.yml
tests/: meson.build
tests/js/: meson.build
tests/js/torch-gobject/: init.c  init.h  meson.build  testDevice.js  testDimname.js  testGenerator.js  testTensor.js
tests/js/torch-gobject/nn/: meson.build
tests/js/torch-gobject/nn/options/: meson.build  testGeneratedOptions.js
torch-gobject/: codegen-options-defs.py  codegen-options.py  codegen.py  meson.build  torch-allocator-internal.h  torch-allocator.cpp  torch-allocator.h  torch-callback-data-internal.h  torch-callback-data.cpp  torch-callback-data.h  torch-device-internal.h  torch-device-type-internal.h  torch-device-type.cpp  torch-device-type.h  torch-device.cpp  torch-device.h  torch-dimname-internal.h  torch-dimname-type-internal.h  torch-dimname-type.cpp  torch-dimname-type.h  torch-dimname.cpp  torch-dimname.h  torch-errors.c  torch-errors.h  torch-generator-internal.h  torch-generator.cpp  torch-generator.h  torch-layout-internal.h  torch-layout.cpp  torch-layout.h  torch-memory-format-internal.h  torch-memory-format.cpp  torch-memory-format.h  torch-optional-value.c  torch-optional-value.h  torch-slice-internal.h  torch-slice.cpp  torch-slice.h  torch-storage-internal.h  torch-storage.cpp  (+17 more)
torch-gobject/codegen/: codegen-aten.py  codegen-nn-options.py  common.py
torch-gobject/nn/: meson.build  torch-nn-any-module-castable-internal.h  torch-nn-any-module-castable.cpp  torch-nn-any-module-castable.h  torch-nn-any-module-internal.h  torch-nn-any-module.cpp  torch-nn-any-module.h  torch-nn-distance-function.h  torch-nn-module-base.cpp  torch-nn-module-base.h  torch-nn-transformer-decoder-layer-internal.h  torch-nn-transformer-decoder-layer.cpp  torch-nn-transformer-decoder-layer.h  torch-nn-transformer-encoder-layer-internal.h  torch-nn-transformer-encoder-layer.cpp  torch-nn-transformer-encoder-layer.h
torch-gobject/nn/definitions/: functions.json  modules.json
torch-gobject/nn/options/: codegen-options-defs.py  meson.build  torch-gobject-generated-options-tests-resources.gresources.xml  torch-nn-conv-padding-mode-internal.h  torch-nn-conv-padding-mode.cpp  torch-nn-conv-padding-mode.h  torch-nn-conv-padding-options-internal.h  torch-nn-conv-padding-options.c  torch-nn-conv-padding-options.h  torch-nn-conv-padding-type.c  torch-nn-conv-padding-type.h  torch-nn-embedding-bag-mode-internal.h  torch-nn-embedding-bag-mode.cpp  torch-nn-embedding-bag-mode.h  torch-nn-grid-sample-mode-internal.h  torch-nn-grid-sample-mode.cpp  torch-nn-grid-sample-mode.h  torch-nn-grid-sample-padding-mode-internal.h  torch-nn-grid-sample-padding-mode.cpp  torch-nn-grid-sample-padding-mode.h  torch-nn-interpolate-mode-internal.h  torch-nn-interpolate-mode.cpp  torch-nn-interpolate-mode.h  torch-nn-loss-reduction-mode-internal.h  torch-nn-loss-reduction-mode.cpp  torch-nn-loss-reduction-mode.h  torch-nn-namedshape-element-internal.h  torch-nn-namedshape-element.cpp  torch-nn-namedshape-element.h  torch-nn-pad-mode-internal.h  torch-nn-pad-mode.cpp  torch-nn-pad-mode.h  torch-nn-rnn-nonlinearity-type-internal.h  torch-nn-rnn-nonlinearity-type.cpp  torch-nn-rnn-nonlinearity-type.h  torch-nn-transformer-activation-type-internal.h  torch-nn-transformer-activation-type.cpp  torch-nn-transformer-activation-type.h  torch-nn-upsample-mode-internal.h  torch-nn-upsample-mode.cpp  (+1 more)
torch-gobject/nn/options/definitions/: options.json
torch-gobject/pch/: torch-gobject-pch.h
